--- a/job-user.html
+++ b/job-user.html
@@ -116,8 +116,8 @@
                         รายการซ่อมของฉัน
                     </a>
                 </div> 
-                <div class="col p-0 text-center">
-                    <a href="search-form.html">
+                <div class="col p-0 text-center"> 
+                    <a href="#" data-toggle="modal" data-target="#search">
                         <i class="fas fa-search"></i>
                         <br>
                         ค้นหางานซ่อม
@@ -161,6 +161,63 @@
             </div>
         </div>
     </div> 
+
+
+    <div class="modal fade" id="search">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content"> 
+                <div class="modal-header">
+                    <h4 class="modal-title">ค้นหางานซ่อม</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div> 
+                <div class="modal-body"> 
+                    <div class="col">
+                        <form action="">
+                            <div class="form-group">     
+                                <label>วันที่แจ้งซ่อม</label>   
+                                <div class="date">
+                                    <input type="text" class="form-control date" id="date_report" name="date_report">
+                                    <span class="input-group-addon"><i class="far fa-calendar-alt"></i></span>
+                                </div>
+                            </div> 
+
+                            
+
+                            <div class="form-group">
+                                <label for="equ_id">ชื่อผู้แจ้งซ่อม</label>
+                                <input type="text" class="form-control" name="equ_id" id="equ_id">
+                            </div>
+                            <div class="form-group">
+                                <label for="equ_name">สถานะ</label>
+                                <select class="selectpicker" title="ประเภทอุปกรณ์" data-show-subtext="true" data-live-search="false" >  
+                                    <option>คอมพิวเตอร์</option>
+                                    <option>โน้ตบุ๊ก</option> 
+                                    <option>ปริ้นเตอร์</option>   
+                                </select> 
+                            </div>
+                            <div class="form-group">
+                                <label for="name">ชื่อผู้แจ้ง</label>
+                                <input type="text" class="form-control" name="" id="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="sn_number">S/N อุปกรณ์</label>
+                                <input type="text" class="form-control" name="" id="sn_number">
+                            </div>
+
+                        </form>
+                    </div>
+                </div> 
+                <div class="modal-footer">
+                    <div class="col-xl-4 col-12 text-center">
+                        <button class="btn btn-primary btn-block">ค้นหางานซ่อม</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
